fix: :bug: update translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,10 @@
 {
   "translation": {
+    "lang": "th",
+    "warning": {
+      "sorry": "ขออภัย หน้านี้ยังไม่พร้อมใช้งาน",
+      "mobile": "ขออภัย หน้านี้ยังไม่พร้อมใช้งาน กรุณาเข้าใช้งานผ่านคอมพิวเตอร์"
+    },
     "banner": {
       "default": "ระบบขนส่งมวลชน",
       "booking": "ระบบจองตั๋ว"
@@ -26,13 +31,20 @@
         "2": "ชำระเงิน",
         "3": "เสร็จสิ้น"
       },
+      "unit": {
+        "person": "คน",
+        "baht": "บาท"
+      },
       "placeholder": "เลือกสถานี",
       "payment": {
+        "title": "เลือกวิธีการชำระเงิน",
         "promptpay": "พร้อมเพย์",
         "creditcard": "บัตรเครดิต",
         "banktransfer": "โอนผ่านธนาคาร",
         "truewallet": "ทรูวอลเล็ต"
-      }
+      },
+      "completed": "ยืนยันการจองสำเร็จ",
+      "bookingId": "รหัสการจอง"
     },
     "inbox": {
       "status": {
