--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -88,6 +88,13 @@
         "ชำระเงินโดย {{paymentMethod}}",
         "วันที่เดินทาง "
       ],
+      "test": {
+        "label": "คลิกสถานะเพื่อเปลี่ยนสถานะตั๋ว (สำหรับการทดสอบ)",
+        "button": {
+          "paid": "ชำระเงิน",
+          "cancelled": "ยกเลิกตั๋ว"
+        }
+      },
       "footer": "ราคา {{price}} บาท"
     },
     "inbox": {
