--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -57,6 +57,7 @@
               }
             },
             "unavailable": "สถานีในอนาคต",
+            "interchange": "* สถานีเปลี่ยนเส้นทาง คุณสามารถเห็นสถานีที่มีชื่อเดียวกันในสายทางอื่นได้",
             "submit": "ต่อไป"
           },
           {
