--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -73,6 +73,13 @@
                 }
               }
             },
+            "info": {
+              "button": "คลิกเพื่อดูรายละเอียดการเดินทาง",
+              "title": "รายละเอียดการเดินทาง",
+              "blue": "สถานีต้นทาง/ปลายทาง",
+              "green": "สถานีเปลี่ยนเส้นทาง",
+              "gray": "จำนวนสถานีที่เดินทางผ่าน"
+            },
             "submit": "ต่อไป"
           },
           {
