feat: :sparkles: add faq

--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -24,7 +24,7 @@
         "my_ticket": "ตั๋วของฉัน",
         "inbox": "กล่องข้อความ",
         "contact_us": "ติดต่อเรา",
-        "help_center": "ศูนย์ช่วยเหลือ"
+        "faq": "คำถามที่พบบ่อย"
       }
     },
     "home_page": {
@@ -133,6 +133,30 @@
       },
       "submit": "ส่งข้อความ"
     },
-    "help_center": {}
+    "faq": {
+      "remark": "คำถามและคำตอบเป็นข้อมูลตัวอย่างเท่านั้น",
+      "questions": [
+        {
+          "question": "สามารถซื้อตั๋วได้ที่ไหนบ้าง",
+          "answer": "สามารถซื้อตั๋วได้ที่เคาน์เตอร์ขายตั๋ว หรือ ตู้ขายตั๋วอัตโนมัติ"
+        },
+        {
+          "question": "สามารถซื้อตั๋วล่วงหน้าได้หรือไม่",
+          "answer": "สามารถซื้อตั๋วล่วงหน้าได้ 30 วัน"
+        },
+        {
+          "question": "สามารถเปลี่ยนเวลาการเดินทางหรือไม่",
+          "answer": "สามารถเปลี่ยนเวลาการเดินทางได้ โดยติดต่อเจ้าหน้าที่ที่เคาน์เตอร์ขายตั๋ว"
+        },
+        {
+          "question": "สามารถเปลี่ยนสถานีต้นทางหรือปลายทางได้หรือไม่",
+          "answer": "สามารถเปลี่ยนสถานีต้นทางหรือปลายทางได้ โดยติดต่อเจ้าหน้าที่ที่เคาน์เตอร์ขายตั๋ว"
+        },
+        {
+          "question": "สามารถเปลี่ยนเส้นทางได้หรือไม่",
+          "answer": "สามารถเปลี่ยนเส้นทางได้ โดยติดต่อเจ้าหน้าที่ที่เคาน์เตอร์ขายตั๋ว"
+        }
+      ]
+    }
   }
 }
