--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,7 +24,7 @@
         "my_ticket": "My Ticket",
         "inbox": "Inbox",
         "contact_us": "Contact Us",
-        "help_center": "Help Center"
+        "faq": "FAQ"
       }
     },
     "home_page": {
@@ -133,6 +133,30 @@
       },
       "submit": "Send"
     },
-    "help_center": {}
+    "faq": {
+      "remark": "FAQ is for sample data only",
+      "questions": [
+        {
+          "question": "Where can I buy tickets?",
+          "answer": "You can buy tickets at ticket counters or ticket vending machines."
+        },
+        {
+          "question": "Can I buy tickets in advance?",
+          "answer": "You can buy tickets in advance up to 30 days."
+        },
+        {
+          "question": "Can I change my travel time?",
+          "answer": "You can change your travel time by contacting the ticket counter."
+        },
+        {
+          "question": "Can I change my origin or destination?",
+          "answer": "You can change your origin or destination by contacting the ticket counter."
+        },
+        {
+          "question": "Can I change my route?",
+          "answer": "You can change your route by contacting the ticket counter."
+        }
+      ]
+    }
   }
 }
